Fix vertical scrollbar

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -5,7 +5,10 @@
     box-sizing: border-box;
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
 
 .center{
     text-align: center;
